# setu-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/setu/: __init__.py  app.py  config.py  logging.py  modes.py  sarvam_client.py  server.py
src/setu/fixtures/: __init__.py
src/setu/tools/: __init__.py  health.py  speak.py  transcribe.py
tests/: test_ping.py  test_tools.py
