[project]
name = "setu-mcp"
version = "0.1.0"
description = "Setu — an open-source MCP server exposing Sarvam AI's API surface as typed tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Manasa SB" }]
keywords = ["mcp", "sarvam", "llm", "speech", "agents"]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Enabled in later milestones (live Sarvam calls, telemetry, reliability).
live = ["sarvamai>=0.1", "httpx>=0.27", "tenacity>=8.2", "opentelemetry-sdk>=1.24"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
setu = "setu.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setu"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/setu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
